# labs_cpp_2nd_sem

Lab_1_part_1/: 1_point.cpp  1_point.h  2_polyline.cpp  2_polyline.h  3_closed_polyline.cpp  3_closed_polyline.h  4_polygon.cpp  4_polygon.h  5_triangle.cpp  5_triangle.h  6_trapezoid.cpp  6_trapezoid.h  7_regular_polygon.cpp  7_regular_polygon.h  CMakeLists.txt  geometry.h  main.cpp
Lab_1_part_2/: CMakeLists.txt  main.cpp  polynomial.cpp  polynomial.h
