cmake_minimum_required(VERSION 3.20)
project(Lab_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab_1 main.cpp 1_point.cpp 1_point.h 2_polyline.cpp 4_polygon.h 3_closed_polyline.cpp 3_closed_polyline.h 4_polygon.cpp 4_polygon.h geometry.h 5_triangle.cpp 5_triangle.h 6_trapezoid.cpp 6_trapezoid.h 7_regular_polygon.cpp 7_regular_polygon.h)
